--- a/appstate.json
+++ b/appstate.json
@@ -1,39 +1,39 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100039840451887%22%3A%22mPNJu6OP%22%7D",
+        "value": "%7B%2261567938668419%22%3A%2204aMjGzl%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.246Z",
-        "lastAccessed": "2024-11-12T03:14:15.246Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
         "key": "datr",
-        "value": "T7glZ1fKP5e_QBRXTDzBnWk5",
+        "value": "GKEvZ3ViQgKhGhqIds_pi5Jw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
         "key": "sb",
-        "value": "T7glZ-1SrAvSoHnKEPXaZQiK",
+        "value": "GKEvZ41U0qgjGf3oPDSxRb29",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
         "key": "vpd",
-        "value": "v1%3B677x360x1.6187498569488525",
+        "value": "v1%3B494x266x2.701960802078247",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
         "key": "ps_n",
@@ -50,70 +50,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
         "key": "locale",
-        "value": "hi_IN",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
-        "key": "c_user",
-        "value": "100039840451887",
+        "key": "m_pixel_ratio",
+        "value": "2.701960802078247",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
-    },
-    {
-        "key": "fr",
-        "value": "02jriT7tDQuoPJb5t.AWWPfXpU61fbL9T82qsuGjG2zQY.BnJbhP..AAA.0.0.BnMcP7.AWVnPXWB1ik",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
-    },
-    {
-        "key": "xs",
-        "value": "37%3AUcAC3vMEb5qSZg%3A2%3A1731314683%3A-1%3A4628",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
         "key": "wd",
-        "value": "445x836",
+        "value": "266x494",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
-        "key": "fbl_st",
-        "value": "100735608%3BT%3A28856353",
+        "key": "c_user",
+        "value": "61567938668419",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
+    },
+    {
+        "key": "fr",
+        "value": "0cEoDtRxKONuRk8kM.AWVlds7Yoxp2uXlELryys5h8Xc4.BnQBxs..AAA.0.0.BnRD5C.AWUSdMwQ7GY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
+    },
+    {
+        "key": "xs",
+        "value": "34%3ANt44HI_Yu_CfoQ%3A2%3A1732525634%3A-1%3A13372",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2670%3Btimestamp%3A1731381230",
+        "value": "v2%3Bclient_version%3A2681%3Btimestamp%3A1732525680",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-12T03:14:15.247Z",
-        "lastAccessed": "2024-11-12T03:14:15.247Z"
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101533667%3BT%3A28875428",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T09:08:08.703Z",
+        "lastAccessed": "2024-11-25T09:08:08.703Z"
     }
-        ]
+]
