--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261567938668419%22%3A%2204aMjGzl%22%7D",
+        "value": "%7B%2261567938668419%22%3A%2204aMjGzl%22%2C%2261558251510273%22%3A%22mFnZRZ5a%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "wd",
@@ -77,52 +68,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "c_user",
-        "value": "61567938668419",
+        "value": "61558251510273",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "fr",
-        "value": "0cEoDtRxKONuRk8kM.AWVlds7Yoxp2uXlELryys5h8Xc4.BnQBxs..AAA.0.0.BnRD5C.AWUSdMwQ7GY",
+        "value": "0cEoDtRxKONuRk8kM.AWX-8RP-8iyYNGUuq8PG94KC79Y.BnQBxs..AAA.0.0.BnRETC.AWXCcR915VI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "xs",
-        "value": "34%3ANt44HI_Yu_CfoQ%3A2%3A1732525634%3A-1%3A13372",
+        "value": "29%3Acq3ap7G3A7TeLw%3A2%3A1732527299%3A-1%3A9526",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2681%3Btimestamp%3A1732525680",
+        "key": "locale",
+        "value": "en_US",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     },
     {
         "key": "fbl_st",
-        "value": "101533667%3BT%3A28875428",
+        "value": "101033171%3BT%3A28875455",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:08:08.703Z",
-        "lastAccessed": "2024-11-25T09:08:08.703Z"
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2681%3Btimestamp%3A1732527330",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T09:35:57.128Z",
+        "lastAccessed": "2024-11-25T09:35:57.128Z"
     }
 ]
