--- a/appstate.json
+++ b/appstate.json
@@ -1,119 +1,128 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261567653883923%22%3A%220HTGKxPY%22%2C%22100054481274048%22%3A%22GeMTvVLK%22%2C%2261568344566695%22%3A%22mL5mKEUM%22%2C%2261568865531062%22%3A%22j390CRuQ%22%2C%2261568319601483%22%3A%22TQNESiwG%22%2C%2261563518530012%22%3A%22j4iODcgR%22%2C%2261557550922492%22%3A%221DENTRHU%22%7D",
+        "value": "%7B%2261567938668419%22%3A%2204aMjGzl%22%2C%2261558251510273%22%3A%22X2DWWU2y%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.683Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
         "key": "datr",
-        "value": "73iSZprEu0WqCnCaL6ykOVvM",
+        "value": "GKEvZ3ViQgKhGhqIds_pi5Jw",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
         "key": "sb",
-        "value": "73iSZhC4p4sZ4uFieSjWjdnz",
+        "value": "GKEvZ41U0qgjGf3oPDSxRb29",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
-    },
-    {
-        "key": "oo",
-        "value": "v1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
         "key": "vpd",
-        "value": "v1%3B754x393x2.75",
+        "value": "v1%3B494x266x2.701960802078247",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
-        "key": "dpr",
-        "value": "3.0234789848327637",
+        "key": "ps_l",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
-        "key": "c_user",
-        "value": "61568306056382",
+        "key": "ps_n",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
-    },
-    {
-        "key": "xs",
-        "value": "37%3AzKvH2sO0ZNh8hw%3A2%3A1732439232%3A-1%3A10305",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
         "key": "locale",
-        "value": "en_GB",
+        "value": "en_US",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
-        "key": "fbl_st",
-        "value": "101020143%3BT%3A28874190",
+        "key": "m_pixel_ratio",
+        "value": "2.701960802078247",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2680%3Btimestamp%3A1732451404",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.687Z",
-        "lastAccessed": "2024-11-25T09:51:30.687Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
         "key": "wd",
-        "value": "891x1710",
+        "value": "266x494",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.688Z",
-        "lastAccessed": "2024-11-25T09:51:30.688Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61558251510273",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     },
     {
         "key": "fr",
-        "value": "1dEQHOPBFNumE6ezm.AWUC5lcSVsJ40mlXdxOfgolYnhQ.BnQeHK..AAA.0.0.BnREif.AWVPcZwEGiY",
+        "value": "0cEoDtRxKONuRk8kM.AWX8bCGActdt-FDVKbc2Uy8z4OY.BnQBxs..AAA.0.0.BnRFFE.AWW6k-lIXww",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T09:51:30.688Z",
-        "lastAccessed": "2024-11-25T09:51:30.688Z"
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
+    },
+    {
+        "key": "xs",
+        "value": "16%3AI0KL4oj7gWaseQ%3A2%3A1732530500%3A-1%3A9526",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101224692%3BT%3A28875508",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2681%3Btimestamp%3A1732530502",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T10:28:59.980Z",
+        "lastAccessed": "2024-11-25T10:28:59.980Z"
     }
 ]
