--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261567938668419%22%3A%2204aMjGzl%22%2C%2261558251510273%22%3A%22X2DWWU2y%22%2C%2261568615729158%22%3A%22JnynxYic%22%7D",
+        "value": "%7B%2261567938668419%22%3A%2204aMjGzl%22%2C%2261558251510273%22%3A%22AmkYdCQI%22%2C%2261568615729158%22%3A%22JnynxYic%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.701960802078247",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "wd",
@@ -68,61 +59,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "c_user",
-        "value": "61568615729158",
+        "value": "61558251510273",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "fr",
-        "value": "0cEoDtRxKONuRk8kM.AWVREC8XRsu9uWI_drc2SnqRrBY.BnQBxs..AAA.0.0.BnRFSK.AWWPuT9BUS8",
+        "value": "0cEoDtRxKONuRk8kM.AWWWfMmVwlVGRPtI2OhisQE9Ttc.BnQBxs..AAA.0.0.BnRJA7.AWWElZ4qrE8",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "xs",
-        "value": "42%3AsTK9ZNECBAmphA%3A2%3A1732531339%3A-1%3A-1",
+        "value": "19%3AF6nlqWEhnjuJEA%3A2%3A1732546619%3A-1%3A9526",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "locale",
-        "value": "hi_IN",
+        "value": "en_US",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101228996%3BT%3A28875522",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2681%3Btimestamp%3A1732531347%3BCRCM%3A-1927477717",
+        "value": "v2%3Bclient_version%3A2681%3Btimestamp%3A1732547480",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T10:47:18.398Z",
-        "lastAccessed": "2024-11-25T10:47:18.398Z"
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101339772%3BT%3A28875791",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-25T15:12:33.360Z",
+        "lastAccessed": "2024-11-25T15:12:33.360Z"
     }
 ]
