--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.366Z",
+        "lastAccessed": "2024-11-27T04:26:41.366Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.366Z",
+        "lastAccessed": "2024-11-27T04:26:41.366Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.366Z",
+        "lastAccessed": "2024-11-27T04:26:41.366Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.366Z",
+        "lastAccessed": "2024-11-27T04:26:41.366Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.366Z",
+        "lastAccessed": "2024-11-27T04:26:41.366Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
-    },
-    {
-        "key": "wd",
-        "value": "266x494",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.366Z",
+        "lastAccessed": "2024-11-27T04:26:41.366Z"
     },
     {
         "key": "c_user",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.366Z",
+        "lastAccessed": "2024-11-27T04:26:41.366Z"
     },
     {
         "key": "fr",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.367Z",
+        "lastAccessed": "2024-11-27T04:26:41.367Z"
     },
     {
         "key": "xs",
@@ -86,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.367Z",
+        "lastAccessed": "2024-11-27T04:26:41.367Z"
     },
     {
         "key": "locale",
@@ -95,25 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.367Z",
+        "lastAccessed": "2024-11-27T04:26:41.367Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2681%3Btimestamp%3A1732547480",
+        "key": "m_pixel_ratio",
+        "value": "2.701960802078247",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.367Z",
+        "lastAccessed": "2024-11-27T04:26:41.367Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x800",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-27T04:26:41.367Z",
+        "lastAccessed": "2024-11-27T04:26:41.367Z"
     },
     {
         "key": "fbl_st",
-        "value": "101339772%3BT%3A28875791",
+        "value": "101335704%3BT%3A28878026",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-25T15:37:54.274Z",
-        "lastAccessed": "2024-11-25T15:37:54.274Z"
+        "creation": "2024-11-27T04:26:41.367Z",
+        "lastAccessed": "2024-11-27T04:26:41.367Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2682%3Btimestamp%3A1732681547",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-27T04:26:41.367Z",
+        "lastAccessed": "2024-11-27T04:26:41.367Z"
     }
 ]
